ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops-tools
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: nginx # already set field in spec 
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.localdev.me
    secretName: jenkins-ingress-cert
  rules:
  - host: jenkins.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 80
